[gd_scene load_steps=7 format=3 uid="uid://dlcmseos75nxh"]

[ext_resource type="Script" path="res://Scripts/Enemies/sniper_enemy.gd" id="1_g2mjt"]
[ext_resource type="Texture2D" uid="uid://cmr3wp5ge7yfi" path="res://PNGs/Enemies/fish_enemy.png" id="2_ubhpi"]
[ext_resource type="Texture2D" uid="uid://by8ty1d2c2qv2" path="res://PNGs/Enemies/alert.png" id="3_y063f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_su86w"]
size = Vector2(72, 167)

[sub_resource type="SpriteFrames" id="SpriteFrames_3xqxw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ubhpi")
}],
"loop": true,
"name": &"idle",
"speed": 0.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_aj5qo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_y063f")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="SniperEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 6
script = ExtResource("1_g2mjt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-10, 15.5)
shape = SubResource("RectangleShape2D_su86w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_3xqxw")
animation = &"idle"

[node name="WallDetector" type="RayCast2D" parent="."]
target_position = Vector2(-53, 0)
collision_mask = 2

[node name="TopandBottomDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, -76)
collision_mask = 2

[node name="HealthBarBackground" type="ColorRect" parent="."]
offset_left = -62.0
offset_top = -90.0
offset_right = 66.0
offset_bottom = -71.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="ColorRect" parent="."]
offset_left = -59.0
offset_top = -86.0
offset_right = 61.0
offset_bottom = -76.0
color = Color(0.263748, 0.586533, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="View" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="View"]
target_position = Vector2(-255, -625)

[node name="RayCast2D2" type="RayCast2D" parent="View"]
target_position = Vector2(-651, -472)

[node name="RayCast2D3" type="RayCast2D" parent="View"]
target_position = Vector2(-765, -3)

[node name="RayCast2D4" type="RayCast2D" parent="View"]
target_position = Vector2(-706, 283)

[node name="RayCast2D5" type="RayCast2D" parent="View"]
target_position = Vector2(-385, 572)

[node name="RayCast2D6" type="RayCast2D" parent="View"]
target_position = Vector2(-614, 423)

[node name="RayCast2D7" type="RayCast2D" parent="View"]
target_position = Vector2(-735, 134)

[node name="RayCast2D8" type="RayCast2D" parent="View"]
target_position = Vector2(-733, -244)

[node name="RayCast2D9" type="RayCast2D" parent="View"]
target_position = Vector2(-430, -577)

[node name="RayCast2D10" type="RayCast2D" parent="View"]
target_position = Vector2(-336, -601)

[node name="RayCast2D11" type="RayCast2D" parent="View"]
target_position = Vector2(-525, -542)

[node name="RayCast2D12" type="RayCast2D" parent="View"]
target_position = Vector2(-703, -366)

[node name="RayCast2D13" type="RayCast2D" parent="View"]
target_position = Vector2(-741, -114)

[node name="RayCast2D14" type="RayCast2D" parent="View"]
target_position = Vector2(-736, 64)

[node name="RayCast2D15" type="RayCast2D" parent="View"]
target_position = Vector2(-712, 207)

[node name="RayCast2D16" type="RayCast2D" parent="View"]
target_position = Vector2(-662, 358)

[node name="RayCast2D17" type="RayCast2D" parent="View"]
target_position = Vector2(-508, 524)

[node name="PursuitTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DetectTimer" type="Timer" parent="."]
one_shot = true

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[node name="Alert" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -123)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_aj5qo")

[node name="WallRunTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="PursuitTimer" to="." method="_on_pursuit_timer_timeout"]
[connection signal="timeout" from="DetectTimer" to="." method="_on_detect_timer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="WallRunTimer" to="." method="_on_wall_run_timer_timeout"]
